# mcp-sandbox

./: .env_template  .gitignore  README.md  app.py  app_local.py  chart.html  docker-compose.yaml  justfile  main.py  pyproject.toml
mcp-terminal/: client.py  llm.py  server.py
mcp-terminal/database/: create_db_script.py
mcp-terminal/tools/: git_tool.py
mcp_terminal/: __init__.py  client.py  llm.py  main.py  mcp_client.py  python_server.py  server.py
mcp_terminal/agents/: data_analytics_agent.py  player_database_agent.py  vega_python_agent.py
mcp_terminal/database/: __init__.py  db_utils.py  models.py  pydantic_models.py
mcp_terminal/llm_models/: huggingface_model.py  llm_models.py
mcp_terminal/services/: __init__.py  qa_memory.py
mcp_terminal/tools/: __init__.py  browser_tool.py  db_tool.py  players_tool.py  python_tool.py  run_python.py  terminal_tool.py  vega_python_tool.py  vega_test.py
mcp_terminal/workflows/: test.py  vega_workflow.py
mcp_themis/: dms_server.py
mcp_themis/tools/: dms_tool.py
mcp_themis/tools/models/: model_tools.py
playwright/: README.md  main.py  playwright_client.py
services/: llama_client.py
tmp/: workflow.db
tools/definitions/: knowledge_base_tool.py  weather_tool.py
tools/resources/: weather_api.py
